added purchase with verification
