# docs/swagger.json
@@ -545,6 +545,18 @@
                             "$ref": "#/definitions/services.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Product not found",
+                        "schema": {
+                            "$ref": "#/definitions/services.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Insufficient stock",
+                        "schema": {
+                            "$ref": "#/definitions/services.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Failed to create purchase",
                         "schema": {
@@ -894,6 +906,9 @@
                 "payment_id": {
                     "type": "integer"
                 },
+                "product_weight_id": {
+                    "type": "integer"
+                },
                 "total_price": {
                     "type": "number"
                 },
@@ -916,6 +931,9 @@
                 },
                 "product_price": {
                     "type": "number"
+                },
+                "product_weight_id": {
+                    "type": "integer"
                 },
                 "quantity": {
                     "type": "integer"
